# django-ecsmanage

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: continuous_integration.yml  release.yml
ecsmanage/: apps.py
ecsmanage/management/commands/: ecsmanage.py
scripts/: test  update
tests/: settings_test.py  test_configuration.py
