[metadata]
name = django-ecsmanage
description = Run any Django management command on an AWS Elastic Container Service (ECS) cluster.
long_description = file: README.rst
url = https://github.com/azavea/django-ecsmanage/
author = Azavea, Inc.
author_email = systems@azavea.com
license = Apache License 2.0
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.2
    Framework :: Django :: 3.0
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
include_package_data = True
packages = find:
python_requires = >=3.5
install_requires =
    Django >=2.2
    boto3 >=1.9.0
    future-fstrings >=1.0.0
setup_requires =
    setuptools_scm ==3.*

[options.extras_require]
tests =
    flake8 >=3.7.7
    black; python_version > "3.6"
